enable admin templates smooth scrolling on iOS safari, resolves #863

--- a/docs/examples/assets/css/admin.css
+++ b/docs/examples/assets/css/admin.css
@@ -107,6 +107,7 @@ ul {
   height: 100%;
   overflow-x: hidden;
   overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 .admin-content-body {
